hphp/test/zend/good/ext/simplexml/tests/SimpleXMLElement_addAttribute_basic.php.skipif
<?php
<<__EntryPoint>> function main() {
if (!extension_loaded("simplexml")) die("skip");
}
