hphp/test/zend/bad/ext/phar/tests/phar_gobyebye.php.skipif
<?php
if (defined('PHP_WINDOWS_VERSION_MAJOR')) die("skip");
if (!extension_loaded("phar")) die("skip");
?>